--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,14 @@
+@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 *{margin:0;padding:0;}
+html, body, #root {
+    width: 100%;
+    height: 100vh; /* Make sure it takes full height */
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
